@@ -15,6 +15,7 @@ wikicalendar-2.0.0 - new 'bundled macros' revision (not yet released)
  * #578: Not all strftime format sequences allowed for wiki-page-format
  * #6636: Failure on use: "day of month out of range" (in Python 2.4)
  * #7564: Integrate re-worked WikiCalendarMacro in new trunk
+ * #7653: Not all matching tickets showing up in calendar
  * #9568: Can Babel be made an optional component for 0.12?
  * #9718: Resolve relative wiki paths in pattern for wiki pages too
  * #9719: Regression: WikiTicketCalendar doesn't show >1 milestones per day.
